# jina_helper

./: .env  .env.example  .gitignore  README.md  config.py  main.py  prompts.yaml  pyproject.toml  requirements.txt  run.bat  run.sh
extention/: background.js  manifest.json  popup.html  styles.css
logic/: models.py  processing.py  se_helper.py
ui/: main_window.py
utils/: signals.py
